style/custom.css
/* ... */
@media all and (max-width: 590px) {
    .about-us_large-img {
        width: 500px;
        height: 354px;
    }
    .about-us_small-img {
        top: 120px;
    }
}    
@media all and (max-width: 530px) {
    .section-2 {
        background-color: #f6f4f4;
        background-image: none;
    }
    .section-2 .container {
        min-height: 610px;
    }
    .about-us_text {
        top: 260px;
    }
    .about-us_large-img {
        width: 370px;
        height: 262px;
        top: -200px;
    }
    .about-us_small-img {
        top: 50px;
    }
}
@media all and (max-width: 380px) {
    .section-2 .container {
        min-height: 580px;
    }
    .about-us_text {
        top: 210px;
    }
    .about-us_large-img {
        width: 320px;
        height: 226px;
        top: -200px;
    }
    .about-us_small-img {
        width: 280px;
        height: 280px;
        top: 0px;
    }
    .about-us_small-img {
        top: 10px;
    }
}
@media all and (max-width: 350px) {
    .section-2 .container {
        min-height: 450px;
    }
    .about-us_text:before {
        height: 35px;
    }
    .about-us_text {
        top: 143px;
        padding-left: 50px;
    }
    .about-us_text h3 {
        width: 220px;
        margin-top: 10px;
        margin-bottom: 10px;
        text-align: justify;
    }
    .about-us_large-img {
        width: 300px;
        height: 212px;
        top: -160px;
    }
    .about-us_small-img {
        width: 280px;
        height: 280px;
        top: 0px;
    }
}
    
    
    
    
        /* Section #3: Our journal */
    
@media all and (max-width: 1220px) {
    .journal_tiles {
        width: 95%;
    }
    .journal_tiles_item {
        width: 50%;
    }
    .journal_tiles_item:nth-child(1) {
        order: 1;
    }
    .journal_tiles_item:nth-child(2) {
        order: 2;
    }
    .journal_tiles_item:nth-child(3) {
        order: 5;
    }
    .journal_tiles_item:nth-child(4) {
        order: 3;
    }
    .journal_tiles_item:nth-child(5) {
        order: 4;
    }
    .journal_tiles_item:nth-child(6) {
        order: 6;
    }
    .journal_tiles_arrow-up {
        width: 0; 
        height: 0; 
        border-top: 10px solid transparent;
        border-bottom: 10px solid transparent;
        border-right: 10px solid rgb(255, 255, 255);
        position: absolute;
        top: 50px;
        left: calc(100% - 20px);
    } /* make it arrow-left */
    .journal_tiles_item_text h2 {
        margin: 0 auto;
        max-width: 345px;
    }
}

@media all and (max-width: 720px) {
    .journal_tiles_item {
        width: 100%;
    }
    .journal_tiles_item:nth-child(1) {
        order: 1;
    }
    .journal_tiles_item:nth-child(2) {
        order: 2;
    }
    .journal_tiles_item:nth-child(3) {
        order: 5;
    }
    .journal_tiles_item:nth-child(4) {
        order: 4;
    }
    .journal_tiles_item:nth-child(5) {
        order: 3;
    }
    .journal_tiles_item:nth-child(6) {
        order: 6;
    }
    .journal_tiles_arrow-up, .journal_tiles_arrow-left, .journal_tiles_arrow-right {
        width: 0; 
        height: 0; 
        border-right: 10px solid transparent;
        border-left: 10px solid transparent;
        border-bottom: 10px solid rgb(255, 255, 255);
        position: absolute;
        left: 50%;
        transform: translate(-50%, 0);
        top: 359px;
    } /* make it arrow-up at the bottom of imgs*/
}
@media all and (max-width: 400px) {
    .journal_tiles {
        width: 100%;
    }
    .journal_tiles_item {
        min-height: 300px;
    }
    .journal_tiles_item_text {
        padding: 40px 20px;
    }
    .journal_tiles_item_text h2 {
        padding: 20px 0 20px 0;
    }
    .journal_tiles_item_text p {
        padding: 0 20px;
    }
}






    /* Section #4: Wanna go form */

@media all and (max-width: 820px) {
    .form_description {
        max-width: 400px;
        margin: 0 auto;
        text-align: center;
    }
    .form_description:before {
        background-position: center top;
    }
    .form_description h3 span {
        display: inline;
    }
    .form_form form {
        flex-direction: column;
    }
    .form_form-element {
        width: 100%;
        min-height: 60px;
        display: flex;
        justify-content: center;
    }
    #submit {
        margin: 10px 0px 20px 0px;
    }
    .form_form-element #name {
        border-right: none;
    }
}    







    /* Section #5: How we work */

@media all and (max-width: 900px) {
    .wework_item {
        width: 50%;
    }
    .wework_item-3, .wework_item-4 {
        margin: 50px 0;
    }
    .wework_items-wrap:before {
        left: 23%;
        width: 54%;
    }
    .wework_items-wrap:after {
        display: block;
        content: " ";
        width: 54%;
        height: 2px;
        background: url('../img/section-5/dash.png') center top repeat;
        position: absolute;
        top: 672px;
        left: 23%;
        z-index: 1;
    }
}

@media all and (max-width: 500px) {
    .wework_item {
        width: 100%;
    }
    .wework_item-2 {
        margin-top: 50px;
    }
    .wework_item-3 {
        margin-bottom: 0px;
    }
    .wework_item-4 {
        margin-bottom: 100px;
    }
    .wework_items-wrap:before, .wework_items-wrap:after {
        display: none;
    } 
}




    /* Section #6: Gallery */

@media all and (max-width: 1100px) {
    .gallery_wrapper {
        grid-gap: 20px;
        transition: 1s;
    }
}
@media all and (max-width: 900px) {
    .gallery_wrapper {
        grid-gap: 15px;
        transition: 1s;
    }
}
/* ... */

